@@ -1,4 +1,5 @@
 2011-01-20  Michael Miousse  <michael.miousse@infoglobe.ca> 
+	* Fixed bug #12429 do not use private accessors
 	* Fixed bug #12428 Adapt Variable Names to naming conventions
 	* Fixed bug #12427 Rename draw*() methods to render*()
 	* Fixed bug #12426: Rename classes according to naming conventions
